testsuite/tests/typecheck/should_fail/T5684b.stderr

T5684b.hs:12:12: error:
    • No instance for (A Bool) arising from a use of ‘op’
    • In the expression: op False False
      In the expression:
        [op False False, op True undefined, op 'c' undefined]
      In an equation for ‘flop2’:
          flop2 = [op False False, op True undefined, op 'c' undefined]

T5684b.hs:14:12: error:
    • No instance for (B Char b0) arising from a use of ‘op’
    • In the expression: op 'c' undefined
      In the expression:
        [op False False, op True undefined, op 'c' undefined]
      In an equation for ‘flop2’:
          flop2 = [op False False, op True undefined, op 'c' undefined]
